--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 	    <script src="scripts/fastclick.js"></script>    
 	    <script src="scripts/nouislider.js"></script>
 	</head>
-	<body>
+	<body style="margin: 0px">
 		<idsp-app>
 		</idsp-app>
 		<!-- start scripts-->
