--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 		<meta content="IE=edge" http-equiv="X-UA-Compatible" />
 		<meta name="description" content="Welcome to IDSP">
 		<title>IDSP</title>
-		<link rel="stylesheet" href="css/app.min.css" />
+		<link rel="stylesheet" href="css/app.css" />
 		<link href='https://fonts.googleapis.com/css?family=Roboto:100,400,700' rel='stylesheet' type='text/css'>
 
 		<!-- 1. Load libraries -->
